--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"></link>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" defer></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" defer> </script>
     <title>Document</title>
 </head>
 <body>
     <div id="fcc_test_suite_wrapper" style="position: relative !important; z-index: 99999 !important;"></div>
-       <main id="main-doc">
+       <main id="main-do">
            <h1 style="font-size: sans-serif; font-weight: 600; font-size: 50px; text-decoration: underline; margin: 0;">
             <span style='font-size:100px;'>Toilets&#128701;</span>
            </h1>
-           <iframe width="1250" height="685" src="https://www.youtube.com/embed/eU2gbB1e8G8" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="1250" height="685" src="https://www.youtube.com/embed/eU2gbB1e8G8" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <nav id="navbar">
             <header id="nav-header"><h1 style="color: red; font-size: 200%;" href="#navbar"> </h1></header>
             <div><span style="font-size: 30px;">Menu</span>
@@ -28,7 +28,7 @@
             </div>
         </nav >
         
-        <section id="The_imporance_of_toilets" class="main-section second-headlines" >
+        <section id="The_imporance_of_toilets" class="main-section second-headlines">
             <header  class="section-topic"><h1>The imporance of toilets</h1></header>
             <p>Toilets are crucial for the healthy development of people, not to mention children. </p>
             <p>So is sanitation – facilities and services for safe disposal of human urine and feces includes maintaining hygiene through services such as garbage collection and wastewater disposal.</p>
@@ -43,7 +43,9 @@
 
         </section>
 
-        <h1><a style="text-align: left; color: red; font-size: 200%;" href="#navbar">Click back to Menu</a></h1>
+            <figcaption><figure style="color: white;">Bonus part-<img width="125" height="85" src="toilet.jpg.jpg"></img></figure></figcaption> 
+    
+            <h1><a style="text-align: left; color: red; font-size: 200%;" href="#navbar">Click back to Menu</a></h1>
 
         <section id="The_three_types_of_toilets" class="main-section second-headlines">
             <header  class="section-topic"><h1>The three types of toilets</h1></header>
