--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <h1 style="font-size: sans-serif; font-weight: 600; font-size: 50px; text-decoration: underline; margin: 0;">
             <span style='font-size:100px;'>Toilets&#128701;</span>
            </h1>
-              <iframe width="1250" height="685" src="https://www.youtube.com/embed/eU2gbB1e8G8" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe alt="if the video is not working you can serach in youtube:'China Uncensored Toilets in China-What to Expect | China Uncensored'" width="1250" height="685" src="https://www.youtube.com/embed/eU2gbB1e8G8" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <nav id="navbar">
             <header id="nav-header"><h1 style="color: red; font-size: 200%;" href="#navbar"> </h1></header>
             <div><span style="font-size: 30px;">Menu</span>
@@ -23,7 +23,7 @@
                             <li><a href="#The_three_types_of_toilets" class="nav-link">The three types of toilets</a></li>
                             <li><a href="#Fun_facts_about_toilets" class="nav-link top">Fun facts about toilets</a></li>
                             <li><a href="#So_why_are_toilets_so_expensive?" class="nav-link top">So why are toilets so expensive?</a></li>
-                            <li><a href="#The_Sources_this_information" class="nav-link top">The Sources this information</a></li>
+                            <li><a href="#The_Sources_for_this_information" class="nav-link top">The Sources for this information</a></li>
                        </ul>
             </div>
         </nav >
@@ -60,7 +60,7 @@
 
 
         </section>
-        <section  class="main-section second-headlines">
+        <section id="Fun_facts_about_toilets" class="main-section second-headlines">
             <header  class="section-topic"><h1>Fun facts about toilets</h1></header>
             <ul>
                 <li>Fast forward to today: around 60% of the world – 4.5 billion people – don't have a toilet that safely manages human waste at home.</li>
@@ -90,8 +90,8 @@
 
         </section>
 
-        <section id="The_Sources_this_information" class="main-section second-headlines">
-            <header class="section-topic"><h1>The Sources this information</h1></header>
+        <section id="The_Sources_for_this_information" class="main-section second-headlines">
+            <header class="section-topic"><h1>The Sources for this information</h1></header>
             <h2>For more information about toilets click <a style="color: yellow;" id="wiki" href="https://en.wikipedia.org/wiki/Toilet">here</a></h2>
         </section>
     
