--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <h1 style="font-size: sans-serif; font-weight: 600; font-size: 50px; text-decoration: underline; margin: 0;">
             <span style='font-size:100px;'>Toilets&#128701;</span>
            </h1>
-              <iframe alt="if the video is not working you can serach in youtube:'China Uncensored Toilets in China-What to Expect | China Uncensored'" width="1250" height="685" src="https://www.youtube.com/embed/eU2gbB1e8G8" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe alt="if the video is not working you can serach in youtube:'China Uncensored Toilets in China-What to Expect | China Uncensored'" width="900px" height="618px" src="https://www.youtube.com/embed/eU2gbB1e8G8" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <nav id="navbar">
             <header id="nav-header"><h1 style="color: red; font-size: 200%;" href="#navbar"> </h1></header>
             <div><span style="font-size: 30px;">Menu</span>
@@ -43,7 +43,7 @@
 
         </section>
 
-            <figcaption><figure style="color: white;">Bonus part-<img width="125" height="85" src="toilet.jpg.jpg"></img></figure></figcaption> 
+            <figcaption><figure style="color: white;">Bonus part-<img width="125px" height="85px" src="toilet.jpg.jpg"></img></figure></figcaption> 
     
             <h1><a style="text-align: left; color: red; font-size: 200%;" href="#navbar">Click back to Menu</a></h1>
 
@@ -92,7 +92,7 @@
 
         <section id="The_Sources_for_this_information" class="main-section second-headlines">
             <header class="section-topic"><h1>The Sources for this information</h1></header>
-            <h2>For more information about toilets click <a style="color: yellow;" id="wiki" href="https://en.wikipedia.org/wiki/Toilet">here</a></h2>
+            <h2>For more information about toilets click <a target="_blank" style="color: yellow;" id="wiki" href="https://en.wikipedia.org/wiki/Toilet">here</a></h2>
         </section>
     
        </main>
